# bicameral

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Mind.toml.example  README.md  pixi.toml  pyproject.toml  pyright.json
.bicamrl/: Mind.toml
.github/workflows/: ci.yml
bicamrl/: __init__.py  __main__.py  cli.py  config_loader.py  exceptions.py  health.py  rate_limiter.py  server.py
bicamrl/cli/: __init__.py  config_schema.py  tui.py
bicamrl/core/: CLAUDE.md  __init__.py  feedback_processor.py  interaction_logger.py  interaction_model.py  interaction_pattern_detector.py  llm_service.py  memory.py  memory_consolidator.py  pattern_detector.py  world_model.py
bicamrl/importers/: __init__.py  claude_code_importer.py
bicamrl/llm/: CLAUDE.md  __init__.py  base_client.py  claude_client.py  mock_client.py  openai_client.py
bicamrl/sleep/: CLAUDE.md  __init__.py  config_validator.py  interaction_role_discoverer.py  llm_providers.py  llm_role_discoverer.py  prompt_optimizer.py  role_discoverer.py  role_manager.py  role_proposer.py  roles.py  sleep.py
bicamrl/storage/: CLAUDE.md  __init__.py  hybrid_store.py  json_utils.py  llm_embeddings.py  sqlite_store.py  vector_store.py
bicamrl/tui/: CLAUDE.md  __init__.py  __main__.py  async_bridge.py  chat_widget.py  permission_http_server.py  permission_server.py  rust_tui.py  sleep_metrics.py  streaming_handler.py  wake_agent.py
bicamrl/utils/: CLAUDE.md  __init__.py  config_validator.py  embeddings.py  log_utils.py  logging_config.py  mcp_logging.py  rate_limit_decorator.py  token_counter.py
docs/: ARCHITECTURE.md  DESIGN.md  IMPLEMENTATION_GAP_ANALYSIS.md  LM_STUDIO_SETUP.md  SLEEP_USER_GUIDE.md  TECH_DEBT_RESOLVED.md  TESTING_EFFICACY.md  TODO.md  api-reference.md  claude-code-permissions.md  configuration.md  getting-started.md  troubleshooting.md
docs/archive/: AI_MEMORY_MVP.md  ARCHITECTURE.md  DESIGN.md  DEVELOPER_FEEDBACK_GUIDE.md  IMPLEMENTATION_ROADMAP.md  SLEEP_LAYER_DESIGN.md
tests/: CLAUDE.md  README_TESTING.md  __init__.py  conftest.py  mcp_mock.py  test_claude_code_importer.py  test_claude_code_integration.py  test_cleanup_archival.py  test_cli.py  test_config.py  test_count_based_consolidation.py  test_dynamic_world_model.py  test_feedback_processor.py  test_health.py  test_hybrid_store.py  test_integration.py  test_interaction_flow.py  test_llm_modes.py  test_llm_providers.py  test_lmstudio_connection.py  test_mcp_compliance.py  test_mcp_integration.py  test_mcp_protocol.py  test_memory.py  test_pattern_detection_accuracy.py  test_pattern_detector.py  test_pattern_detector_edge_cases.py  test_rate_limiter.py  test_role_manager.py  test_role_proposer.py  test_semantic_extraction.py  test_sleep_layer_behavior.py  test_storage.py  test_stress_performance.py  test_world_model.py  test_world_model_persistence.py
tui/: CLAUDE.md  Cargo.toml
tui/src/: app.rs  app_core.rs  code_highlighter.rs  debug_logger.rs  lib.rs  markdown.rs  spinner.rs  theme.rs  ui.rs  unicode_utils.rs  widgets.rs
tui/src/widgets/: log_viewer.rs  sparkline.rs  tree.rs
