[workspace]
members = ["tui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bicamrl Contributors"]

[workspace.dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
ratatui = "0.25"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
unicode-width = "0.1"
